--- a/client/index.html
+++ b/client/index.html
@@ -13,27 +13,30 @@
 </head>
 
 <body>
-  <div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container" id="big">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a id"brand" class="navbar-brand" href="/" style="color:white;">Kikbak.tv</a>
-        <div class="nav-collapse collapse navbar-responsive-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/rooms"><span class="purp">Browse</span></a></li>
-                <li><a href="/rooms/find"><i class="icon-edit icon-white"></i><span class="blue">Find</span> Private Theater</a></li>
-                <li><a href="/rooms/new/add"><i class="icon-edit icon-white"></i><span class="green">Create</span></a></li>
-            </ul>
-            <ul class="nav navbar-nav pull-right">
-                <li class="about-menu"><a href="/about">About</a></li>
-            </ul>
-        </div>
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a id"brand" class="navbar-brand" href="/" style="color:white;">Kikbak.tv</a>
     </div>
-  </div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+      <ul class="nav navbar-nav">
+        <li><a href="/rooms"><span class="purp">Browse</span></a></li>
+        <li><a href="/rooms/find"><i class="icon-edit icon-white"></i><span class="blue">Find</span> Private Theater</a></li>
+        <li><a href="/rooms/new/add"><i class="icon-edit icon-white"></i><span class="green">Create</span></a></li>
+      </ul>
+      <ul class="nav navbar-nav pull-right">
+        <li class="about-menu"><a href="/about">About</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </nav>
   <div class="container wrapper primary">
       {{renderPage}}
   </div> 
